--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,7 @@
+*{
+  background-color: rgb(255, 249, 241);
+  margin: 20px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
