--- a/my-app/src/Nav-tag.css
+++ b/my-app/src/Nav-tag.css
@@ -1,3 +1,8 @@
+nav{
+    background-color: rgba(242, 153, 153, 0.762);
+}
+
+
 .Nav-tag{
     display: inline-grid;
     grid-template-columns:repeat(6,1fr) ;
