--- a/my-app/src/Header.css
+++ b/my-app/src/Header.css
@@ -29,9 +29,9 @@ div >p{
 }
 
 
-/* @media only screen and (max-width: 900px) {
-    div.home {
+@media only screen and (max-width: 900px){
+    div#home {
       width: 100vw;
       height: 50vh;
     }
-  } */
+  }
